# smarthome_rpi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_and_run_coverage.sh  build_and_run_ut.sh
sw/: main.cpp  main_test.cpp
sw/data_manager/: CMakeLists.txt
sw/data_manager/include/: DataProvider.h  SocketDriver.h
sw/data_manager/public/: IDataProvider.h  ISocketDriver.h
sw/data_manager/source/: DataProvider.cpp  SocketDriver.cpp
sw/data_manager/tests/: CMakeLists.txt
sw/data_manager/tests/mocks/: SocketDriverMock.h
sw/data_manager/tests/unit/: DataProviderTests.cpp  SocketDriverTests.cpp
sw/gui/: main_window.ui  resources.qrc
sw/logger/: CMakeLists.txt
sw/logger/include/: Logger.h
sw/logger/source/: Logger.cpp
sw/logger/tests/: CMakeLists.txt
sw/logger/tests/mocks/: logger_mock.hpp
sw/main_window/: CMakeLists.txt
sw/main_window/include/: MainWindowWrapper.h  main_window.h
sw/main_window/public/: IMainWindowWrapper.h
sw/main_window/source/: main_window.cpp
sw/main_window/tests/: CMakeLists.txt
sw/main_window/tests/mocks/: MainWindowWrapperMock.h
sw/main_window/tests/unit/: MainWindowTests.cpp
